View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030055 | Community | OCCT:Modeling Algorithms | public | 2018-08-10 00:51 | 2021-08-29 18:51 |
Reporter | dipts | Assigned To | msv | ||
Priority | normal | Severity | major | ||
Status | new | Resolution | open | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.3.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0030055: BRepOffset_MakeOffset throws "TopoDS_Vertex hasn't gp_Pnt" in intersection mode | ||||
Description | An exception was caught 0000019119B769B0 : Standard_NullObject: BRep_Tool:: TopoDS_Vertex hasn't gp_Pnt bgerror failed to handle background error. Original error: ** Exception ** 0000019119B769B0 : Standard_NullObject: BRep_Tool:: TopoDS_Vertex hasn't gp_Pnt Error in bgerror: | ||||
Steps To Reproduce | restore Loft.brep thickshell res Loft 1 i | ||||
Tags | No tags attached. | ||||
Test case number | |||||
Date Modified | Username | Field | Change |
---|---|---|---|
2018-08-10 00:51 | dipts | New Issue | |
2018-08-10 00:51 | dipts | Assigned To | => msv |
2018-08-10 00:51 | dipts | File Added: Loft.brep | |
2019-08-12 17:45 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:53 | msv | Target Version | 7.5.0 => 7.6.0 |
2021-08-29 18:51 | msv | Target Version | 7.6.0 => 7.7.0 |